--- a/formmark.ui
+++ b/formmark.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1116</width>
-    <height>775</height>
+    <height>847</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -269,7 +269,7 @@
            </property>
           </widget>
          </item>
-         <item row="6" column="1" colspan="2">
+         <item row="6" column="1">
           <widget class="QPlainTextEdit" name="plainTextEditDescrSpec">
            <property name="maximumSize">
             <size>
@@ -279,7 +279,7 @@
            </property>
           </widget>
          </item>
-         <item row="6" column="3">
+         <item row="6" column="2">
           <widget class="QLabel" name="label_22">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
@@ -292,7 +292,7 @@
            </property>
           </widget>
          </item>
-         <item row="6" column="4" colspan="2">
+         <item row="6" column="3" colspan="3">
           <widget class="QPlainTextEdit" name="plainTextEditDescrFeature">
            <property name="maximumSize">
             <size>
@@ -305,11 +305,43 @@
         </layout>
        </item>
        <item>
+        <layout class="QHBoxLayout" name="horizontalLayout_3">
+         <item>
+          <layout class="QVBoxLayout" name="verticalLayout_3">
+           <item>
+            <widget class="QLabel" name="label_24">
+             <property name="text">
+              <string>Упаковка, штрихкод</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="DbViewer" name="tableViewPack"/>
+           </item>
+          </layout>
+         </item>
+         <item>
+          <layout class="QVBoxLayout" name="verticalLayout_7">
+           <item>
+            <widget class="QLabel" name="label_23">
+             <property name="text">
+              <string>Характеристики плавления</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="DbViewer" name="tableViewPlav"/>
+           </item>
+          </layout>
+         </item>
+        </layout>
+       </item>
+       <item>
         <widget class="QGroupBox" name="groupBoxVar">
          <property name="title">
           <string>Параметры варианта</string>
          </property>
-         <layout class="QVBoxLayout" name="verticalLayout_8">
+         <layout class="QVBoxLayout" name="verticalLayout_9">
           <item>
            <layout class="QHBoxLayout" name="horizontalLayout_6">
             <item>
@@ -344,6 +376,13 @@
              </widget>
             </item>
             <item>
+             <widget class="QPushButton" name="pushButtonCopy">
+              <property name="text">
+               <string>Заполнить</string>
+              </property>
+             </widget>
+            </item>
+            <item>
              <spacer name="horizontalSpacer_2">
               <property name="orientation">
                <enum>Qt::Horizontal</enum>
@@ -359,146 +398,133 @@
            </layout>
           </item>
           <item>
-           <layout class="QGridLayout" name="gridLayout_2">
-            <item row="0" column="0">
-             <widget class="QLabel" name="label_20">
-              <property name="text">
-               <string>Проволока</string>
-              </property>
-             </widget>
+           <layout class="QHBoxLayout" name="horizontalLayout">
+            <item>
+             <layout class="QGridLayout" name="gridLayout_2">
+              <item row="0" column="0">
+               <widget class="QLabel" name="label_20">
+                <property name="text">
+                 <string>Проволока</string>
+                </property>
+               </widget>
+              </item>
+              <item row="0" column="1">
+               <widget class="QComboBox" name="comboBoxProvVar"/>
+              </item>
+              <item row="1" column="0">
+               <widget class="QLabel" name="label_26">
+                <property name="text">
+                 <string>Знаменатель</string>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="1">
+               <widget class="QLineEdit" name="lineEditVarZnam">
+                <property name="maximumSize">
+                 <size>
+                  <width>150</width>
+                  <height>16777215</height>
+                 </size>
+                </property>
+               </widget>
+              </item>
+              <item row="2" column="0">
+               <widget class="QLabel" name="label_16">
+                <property name="text">
+                 <string>Режим повт. прок.</string>
+                </property>
+               </widget>
+              </item>
+              <item row="2" column="1">
+               <widget class="QLineEdit" name="lineEditProcVar">
+                <property name="maximumSize">
+                 <size>
+                  <width>150</width>
+                  <height>16777215</height>
+                 </size>
+                </property>
+               </widget>
+              </item>
+             </layout>
             </item>
-            <item row="0" column="1">
-             <widget class="QComboBox" name="comboBoxProvVar"/>
+            <item>
+             <layout class="QVBoxLayout" name="verticalLayout_4">
+              <item>
+               <widget class="QLabel" name="label_27">
+                <property name="text">
+                 <string>Описание</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="QPlainTextEdit" name="plainTextEditDescr">
+                <property name="minimumSize">
+                 <size>
+                  <width>300</width>
+                  <height>0</height>
+                 </size>
+                </property>
+               </widget>
+              </item>
+             </layout>
             </item>
-            <item row="0" column="2">
-             <widget class="QLabel" name="label_27">
-              <property name="text">
-               <string>Описание</string>
-              </property>
-             </widget>
+            <item>
+             <layout class="QVBoxLayout" name="verticalLayout_8">
+              <item>
+               <widget class="QLabel" name="label_19">
+                <property name="text">
+                 <string>Токи</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="DbViewer" name="tableViewAmp">
+                <property name="minimumSize">
+                 <size>
+                  <width>350</width>
+                  <height>0</height>
+                 </size>
+                </property>
+               </widget>
+              </item>
+             </layout>
             </item>
-            <item row="1" column="0">
-             <widget class="QLabel" name="label_26">
-              <property name="text">
-               <string>Знаменатель</string>
-              </property>
-             </widget>
+           </layout>
+          </item>
+          <item>
+           <layout class="QHBoxLayout" name="horizontalLayout_2">
+            <item>
+             <layout class="QVBoxLayout" name="verticalLayout">
+              <item>
+               <widget class="QLabel" name="label_17">
+                <property name="text">
+                 <string>Химия</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="DbViewer" name="tableViewChem"/>
+              </item>
+             </layout>
             </item>
-            <item row="1" column="1">
-             <widget class="QLineEdit" name="lineEditVarZnam">
-              <property name="maximumSize">
-               <size>
-                <width>150</width>
-                <height>16777215</height>
-               </size>
-              </property>
-             </widget>
-            </item>
-            <item row="2" column="0">
-             <widget class="QLabel" name="label_16">
-              <property name="text">
-               <string>Режим повт. прок.</string>
-              </property>
-             </widget>
-            </item>
-            <item row="2" column="1">
-             <widget class="QLineEdit" name="lineEditProcVar">
-              <property name="maximumSize">
-               <size>
-                <width>150</width>
-                <height>16777215</height>
-               </size>
-              </property>
-             </widget>
-            </item>
-            <item row="0" column="3" rowspan="2">
-             <widget class="QPlainTextEdit" name="plainTextEditDescr"/>
-            </item>
-            <item row="2" column="2">
-             <widget class="QLabel" name="label_19">
-              <property name="text">
-               <string>Токи</string>
-              </property>
-             </widget>
-            </item>
-            <item row="2" column="3">
-             <widget class="DbViewer" name="tableViewAmp"/>
+            <item>
+             <layout class="QVBoxLayout" name="verticalLayout_2">
+              <item>
+               <widget class="QLabel" name="label_18">
+                <property name="text">
+                 <string>Механика</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="DbViewer" name="tableViewMech"/>
+              </item>
+             </layout>
             </item>
            </layout>
           </item>
          </layout>
         </widget>
-       </item>
-       <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_2">
-         <item>
-          <layout class="QVBoxLayout" name="verticalLayout_3">
-           <item>
-            <widget class="QLabel" name="label_24">
-             <property name="text">
-              <string>Упаковка, штрихкод</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="DbViewer" name="tableViewPack"/>
-           </item>
-          </layout>
-         </item>
-        </layout>
-       </item>
-       <item>
-        <layout class="QHBoxLayout" name="horizontalLayout">
-         <item>
-          <layout class="QVBoxLayout" name="verticalLayout">
-           <item>
-            <widget class="QLabel" name="label_17">
-             <property name="text">
-              <string>Химия</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="DbViewer" name="tableViewChem"/>
-           </item>
-          </layout>
-         </item>
-         <item>
-          <layout class="QVBoxLayout" name="verticalLayout_2">
-           <item>
-            <widget class="QLabel" name="label_18">
-             <property name="text">
-              <string>Механика</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="DbViewer" name="tableViewMech"/>
-           </item>
-          </layout>
-         </item>
-         <item>
-          <layout class="QVBoxLayout" name="verticalLayout_7">
-           <item>
-            <widget class="QLabel" name="label_23">
-             <property name="text">
-              <string>Характеристики плавления</string>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="DbViewer" name="tableViewPlav">
-             <property name="maximumSize">
-              <size>
-               <width>16777215</width>
-               <height>200</height>
-              </size>
-             </property>
-            </widget>
-           </item>
-          </layout>
-         </item>
-        </layout>
        </item>
        <item>
         <layout class="QHBoxLayout" name="horizontalLayoutLabel">
@@ -597,13 +623,13 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>DateEdit</class>
-   <extends>QDateEdit</extends>
+   <class>DbViewer</class>
+   <extends>QTableView</extends>
    <header>db/dbviewer.h</header>
   </customwidget>
   <customwidget>
-   <class>DbViewer</class>
-   <extends>QTableView</extends>
+   <class>DateEdit</class>
+   <extends>QDateEdit</extends>
    <header>db/dbviewer.h</header>
   </customwidget>
  </customwidgets>
