--- a/res.qrc
+++ b/res.qrc
@@ -41,5 +41,6 @@
         <file>images/4.png</file>
         <file>images/5.png</file>
         <file>images/6.png</file>
+        <file>images/key.png</file>
     </qresource>
 </RCC>
