--- a/formmark.ui
+++ b/formmark.ui
@@ -368,7 +368,7 @@
              </widget>
             </item>
             <item>
-             <widget class="QComboBox" name="comboBoxVar">
+             <widget class="DbComboBox" name="comboBoxVar">
               <property name="minimumSize">
                <size>
                 <width>200</width>
@@ -452,7 +452,7 @@
                </widget>
               </item>
               <item row="0" column="1">
-               <widget class="QComboBox" name="comboBoxProvVar"/>
+               <widget class="DbComboBox" name="comboBoxProvVar"/>
               </item>
               <item row="1" column="0">
                <widget class="QLabel" name="label_26">
@@ -589,7 +589,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QComboBox" name="comboBoxDiam"/>
+          <widget class="DbComboBox" name="comboBoxDiam"/>
          </item>
          <item>
           <widget class="QCheckBox" name="checkBoxOrder">
