--- a/formpart.ui
+++ b/formpart.ui
@@ -207,6 +207,13 @@
          <item>
           <layout class="QVBoxLayout" name="verticalLayout_4">
            <item>
+            <widget class="QCheckBox" name="checkBoxOk">
+             <property name="text">
+              <string>Испытания в норме</string>
+             </property>
+            </widget>
+           </item>
+           <item>
             <widget class="QLabel" name="label_4">
              <property name="text">
               <string>Примечание:</string>
@@ -433,11 +440,6 @@
  <layoutdefault spacing="6" margin="11"/>
  <customwidgets>
   <customwidget>
-   <class>DbViewer</class>
-   <extends>QTableView</extends>
-   <header>db/dbviewer.h</header>
-  </customwidget>
-  <customwidget>
    <class>DbDateEdit</class>
    <extends>QDateEdit</extends>
    <header>db/dbdateedit.h</header>
@@ -446,6 +448,11 @@
    <class>DbComboBox</class>
    <extends>QComboBox</extends>
    <header>db/dbcombobox.h</header>
+  </customwidget>
+  <customwidget>
+   <class>DbViewer</class>
+   <extends>QTableView</extends>
+   <header>db/dbviewer.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
