--- a/editor.ui
+++ b/editor.ui
@@ -49,7 +49,7 @@
           <x>0</x>
           <y>0</y>
           <width>169</width>
-          <height>692</height>
+          <height>691</height>
          </rect>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout">
@@ -112,18 +112,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QCheckBox" name="checkBoxObr">
-       <property name="text">
-        <string>Образец</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QCheckBox" name="checkBoxPrn">
-       <property name="text">
-        <string>Подпись</string>
-       </property>
-      </widget>
+      <widget class="QComboBox" name="comboBoxType"/>
      </item>
      <item>
       <widget class="QRadioButton" name="radioButtonRus">
