--- a/formmark.ui
+++ b/formmark.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1116</width>
-    <height>847</height>
+    <width>1114</width>
+    <height>845</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -572,6 +572,20 @@
           </item>
           <item>
            <layout class="QHBoxLayout" name="horizontalLayout_2">
+            <item>
+             <layout class="QVBoxLayout" name="verticalLayout_12">
+              <item>
+               <widget class="QLabel" name="label_20">
+                <property name="text">
+                 <string>Нормативная документация</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <widget class="DbViewer" name="tableViewGost"/>
+              </item>
+             </layout>
+            </item>
             <item>
              <layout class="QVBoxLayout" name="verticalLayout">
               <item>
